fix hash scroll postion error & dark mode display (#239)
* fix hash scroll postion error & dark mode display

* using docs site config

--- a/website/src/components/Autoapi/styles/index.scss
+++ b/website/src/components/Autoapi/styles/index.scss
@@ -893,7 +893,7 @@
     visibility: visible;
   }
   dt:target {
-    background-color: var(--ifm-color-gray-200);
+    scroll-margin-top: calc(var(--ifm-navbar-height) + 0.5rem);
   }
   .rst-current-version {
     .dropdown {
